--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         </activity>
         <activity android:name=".view.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".view.AddActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".view.HelpActivity" />
     </application>
 
 </manifest>
