--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.goyourfly:MultiSelectAdapter:-SNAPSHOT'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
