--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.github.goyourfly:MultiSelectAdapter:-SNAPSHOT'
+    compile 'com.github.goyourfly:MultiSelectAdapter:3.4'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
